# GenDiff

./: .gitignore  Makefile  README.md  est_gendiff copy.py  gendiff-demo.cast  pyproject.toml  setup.cfg
.github/workflows/: Python CI.yml  Test Coverage.yml  main.yml
gendiff/: __init__.py  atomic_dicts.py  commons.py  diff_tools.py  gendiff_parser.py  loaders.py  parser.py  structured_dicts.py
gendiff/formatters/: __init__.py  json.py  json_formatter.py  plain.py  plain_formatter.py  stylish.py  stylish_formatter.py
gendiff/formatters/modules/: json.py  plain.py  stylish.py
gendiff/gendiff_parser/: gendiff_parser.py
gendiff/scripts/: gendiff.py  hexlet_python_package.py
gendiff/scripts/gendiff_parser/: gendiff_parser.py
tests/: __init__.py  test_gendiff.py  test_gendiff_init.py
tests/fixtures/: file1.json
tests/fixtures/nested/: file2.yaml
tests/fixtures/nested/formatters/json/: result_diffs1.txt
tests/fixtures/nested/formatters/stylish/: result_diffs1.txt  result_diffs3.txt  result_diffs4.txt
tests/fixtures/nested_jsons/: gendiff_json_formatter.cast
tests/fixtures/plain/formatters/json/: result_diffs1.txt
tests/fixtures/plain/formatters/plain/: result_diffs1.txt
tests/fixtures/plain/formatters/stylish/: result_diffs3.txt  result_diffs4.txt
tests/fixtures/plain/json/: file2.json  file3.json
tests/fixtures/plain_/plain/: result_diffs1.txt
